# stephanie

./: .dockerignore  .env_example.txt  .gitignore  404.html  CODE_QUALITY_IMPROVEMENTS.md  Dockerfile  LICENSE  MANIFEST.in  README.md  REFACTORING_SUMMARY.md  co_ai_code_dump.txt  codebase_context.txt  design.md  docker-compose.yml  import.bat  import_openai_html.bat  import_openai_json.bat  index.html  machine_coding.md  metrics_context.txt  mkdocs.yml  output.json  policy_summary.json  pruned_context.json  pyproject.toml  requirements.txt  requirements_raw.txt  requirements_sis.txt  run_pipeline.py  run_server.bat  schema.sql  schema_raw.sql  schema_views.sql  setup.py  skynet_papers.csv  strategyqa_goals.jsonl  supervisor.py  test_pipeline.py  test_search.bat  vale.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: publish.yml  qodana_code_quality.yml
agents/: base.py  evolution.py  generation.py  index.html  meta_review.py
api/: main.py
api/routers/: builder.py
api/templates/: builder.html
app/: api.py  db.py  dump_memories.py  embed_and_store.py  embedding.py  import_openai_html.py  import_openai_json.py  main.py  models.py  query_engine.py  search.py
co_ai/: __init__.py  cli.py  constants.py  main.py  run_pipeline.py  supervisor.py
co_ai/agents/: __init__.py  adaptive_reasoner.py  auto_tuner.py  automind.py  base.py  base_agent.py  compiler_optimizer.py  cot_dspy_generator.py  debate.py  (+56 more)
config/: arm.yaml  automind.yaml  base_mutation.yaml  belief.yaml  cartridge.yaml  cbr.yaml  cbr2.yaml  chat.yaml  chat_analyze.yaml  chat_training.yaml  code.yaml  compare.yaml  comparison.yaml  compiler.yaml  config.yaml  cot.yaml  cot_long.yaml  critic.yaml  data.yaml  demo.yaml  dynamic.yaml  entertainment.yaml  ethics.yaml  gap.yaml  gild.yaml  hal.yaml  hf.yaml  hf_gap.yaml  hnet.yaml  hrm.yaml  icl.yaml  index.html  info.yaml  information.yaml  jas.yaml  jitter_v1.yaml  knowledge.yaml  ladder_comparison.yaml  ladder_cot.yaml  ladder_cot_dspy.yaml  (+60 more)
configs/: config.yaml  pipeline.yaml  tesla.txt
custom/: index.html
data/: arm_preference_pairs.json  reflection_deltas.jsonl  strategyqa_goals.jsonl
docs/: agents.md  config.md  custom.md  index.md  installation.md  memory.md  paper.md  tools.md
installation/: index.html
interface/: cli.py
logs/: pipeline_log.jsonl
mars_reports/: mars_report_20250804_075011.json  mars_report_20250826_213317.json
memory/: index.html  vector_store.py
paper/: index.html
prompts/: evolution_feasibility.txt  evolution_goal_aligned.txt  evolution_grafting.txt  evolution_inspiration.txt  evolution_out_of_the_box.txt  evolution_ranking_fallback.txt  evolution_self_critic.txt  evolution_simplification.txt  generation_hypothesis.txt  literature_parse.txt  literature_query.txt  meta_review_expert_summary.txt  meta_review_feedback_to_generation.txt  meta_review_research_overview.txt  meta_review_safety_check.txt  proximity_analysis.txt  ranking_debate.txt  reflection_deep_verification.txt  reflection_full_review.txt  reflection_novelty_check.txt  reflection_safety_check.txt  reflection_simulation_review.txt  system_profile.md
scripts/: Update-OllamaModels.ps1  add_imports.py  agent_ctor_appctx.py  analyze_json_heavy.py  annotate_python_files.py  app.py  backfill.py  backup.py  best_papers.sql  build_risk_dataset.py  bundler.py  check_future.py  clean.ps1  code.ps1  code_dir.ps1  compress.ps1  convert_to_jinja.py  create_agent.py  db_size.py  debug_gap_run.py  dedeup_search_results.sql  dir_tree.py  dump_schema.py  eval_vpm_thought_model.py  evidence_extractor.py  export_goal_relevance_dataset.py  fix_appcontext_imports.py  generate_configs.py  generate_goals.py  generate_reflection_delta.py  get_models.py  helpsteer3.py  hf_local_models.py  import_evaluations.py  init_db.sh  insert_prompt_rule.sql  inspect_df.py  list_requirements.py  logger_codemod.py  manifest.ps1  (+33 more)
search/: search_index.json
sis/: __main__.py  arena_emitters.py  dashboard.py  db.py  main.py  merged_code.md
static/: index.html
stephanie/: __init__.py  cli.py  constants.py  containers.py  main.py  supervisor.py  system_init.py
tests/: conftest.py  run_pipeline.py  test_agents.py  test_extractor.py  test_generation.py  test_memory.py  test_paper_improver_smoke.py  test_pipeline.py  test_ranking.py  test_reflection.py  test_skill_filters.py
tools/: convert_to_jinja.py  index.html  organize_prompts.py  view_ranking_trace.py  zip_project.py
(+2941 files in other folders)
