[project]
name = "stephanie"
version = "0.1.1"
description = "Stephanie — self-improving AI research & reasoning engine"
authors = [{ name = "Ernan Hughes", email = "ernanhughes@gmail.com" }]
[project.license]
file = "LICENSE"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psycopg2-binary",
    "pyyaml", 
    "pgvector",
    "hydra-core", 
    "jinja2",
    "numpy", 
    "dspy", 
    "tabulate",
    "python_dotenv",
    "ollama",
    "unstructured",
    "fuzzywuzzy",
    "requests",
    "wikipedia",
    "duckduckgo-search",
    "readability-lxml",
    "beautifulsoup4",
    "arxiv",
    "gradio_client",
    "torch",
    "huggingface_hub",
    "python-Levenshtein",
    "matplotlib",
    "scikit-learn",
    "pdfminer.six"
]

[project.urls]
Homepage = "https://github.com/ernanhughes/stephanie"

[tool.setuptools.package-data]
# ship configs & prompts by default
"*" = [
  "config/**/*.yaml",
  "prompts/**/*.txt",
  "docs/**/*.md",
]

[tool.setuptools.exclude-package-data]
# models, logs, outputs, big artifacts stay out of the wheel; fetch at runtime
"*" = [
  "models/**",
  "outputs/**",
  "logs/**",
  "data/**",
  "dist/**",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
