[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "stephanie"
version = "0.1.1"
description = "Stephanie — self-improving AI research & reasoning engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ernan Hughes", email = "ernanhughes@gmail.com" }]
license = { file = "LICENSE" }

dependencies = [
    # Core config & engine
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "jinja2>=3.1",
    "pyyaml>=6",
    "numpy>=1.24",
    "dspy>=2",
    "tabulate>=0.9",
    "python-dotenv>=1",
    "dependency-injector>=4.41",

    # Database / storage
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",

    # Web search / scraping
    "requests>=2.31",
    "wikipedia>=1.4",
    "duckduckgo-search>=6",
    "readability-lxml>=0.8",
    "beautifulsoup4>=4.12",
    "arxiv>=2.1",
    "gradio_client>=0.16",

    # Models / embeddings
    "torch>=2.2",
    "sentence-transformers>=3",
    "ollama>=0.3",
    "unstructured>=0.14",
    "huggingface_hub>=0.24",
    "hf_transfer>=0.1",

    # Fuzzy matching
    "python-Levenshtein>=0.25",
    "fuzzywuzzy>=0.18",    # keep for compatibility
    "rapidfuzz>=3",        # preferred replacement

    # Parsing / text
    "lxml>=5",

    # Analysis
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "pdfminer.six>=20240706"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ernanhughes/stephanie"
Repository = "https://github.com/ernanhughes/stephanie"
Issues = "https://github.com/ernanhughes/stephanie/issues"

[project.scripts]
stephanie = "main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
  "config/**/*.yaml",
  "prompts/**/*.txt",
  "docs/**/*.md",
]

[tool.setuptools.exclude-package-data]
"*" = [
  "models/**",
  "outputs/**",
  "logs/**",
  "data/**",
  "dist/**",
]
